--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,13 @@
 {
     "manifest_version": 3,
-    "name": "Random Number Generator",
+    "name": "Simple Popup Example",
     "version": "1.0",
-    "description": "A simple Chrome extension that shows a random number.",
+    "description": "A simple Chrome extension that shows a message when a button is clicked.",
     "action": {
-        "default_popup": "popup/popup.html",
-        "default_icon": {
-            "16": "popup/website.png"
-        }
+      "default_popup": "popup/popup.html"
     },
     "permissions": [
-        "activeTab",
-        "storage"
-    ],
-    "background": {
-        "scripts": [
-            "background.js"
-        ]
-    },
-    "content_scripts": [
-        {
-            "matches": [
-                "<all_urls>"
-            ],
-            "js": [
-                "CanvasOverlay/content.js"
-            ]
-        }
+      "activeTab"
     ]
-}
+  }
+  
