oke eigentlich sollte es jetzt das Bild durch die face-api gejagt werden udn dann läuft das, aber nope es lässt sich nur das Bild runterladen, alle weiteren Schritte wie das detection als Array in der Konsole ausgegeben werden soll, klappt nicht, Wahrscheinlich kann die FaceApi nicht auf das DOM zugreifen. Aber ChatGpt mein jetzt wird das direkt auf der Website ausgeführt und dort in der Konsole ausgegeben. Es wird aber nur in der Popup-Konsole die ImageID ausgeben. Fcked up i swear. Zeit: knapp 3h (irgendwas läuft gewaltig falsch)

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,8 @@
     "activeTab",
     "downloads",
     "scripting",
+    "downloads.open",
+    "downloads.shelf",
     "storage"
   ],
   "action": {
