buttons zum starten und pausieren hinzugefügt. War ein etwas Act, aber einiges konnte ich selbständig ohne Hilfe verstehen. Funktioniert noch nicht ganz wie gewollt, aber das sind wohl einfach die Datenschutzrechtlichen Probleme, wie das ich keine externe Einbindungen wie Chart.js vornehmen kann. Zeit - ca 2 1/2h gemessen mit dem Timer

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
   "manifest_version": 3,
-  "name": "Productivity Timer",
-  "version": "1.5",
-  "description": "A simple productivity timer with note-taking feature.",
+  "name": "Productivity Tool",
+  "version": "1.6",
+  "description": "Simply make your time valuable.",
   "background": {
     "service_worker": "background.js"
   },
   "action": {
     "default_popup": "popup/popup.html",
-    "default_icon": "popup/website.png"
+    "default_icon": "popup/chat-pfeil-wachsen.png"
   },
   "permissions": [
     "storage"
-  ]
+  ],
+
+  "content_security_policy": {
+    "script-src": "self",
+    "object-src": "self"
+  }
 }
