mir sind etwas die Ideen ausgegangen, deswegen ploppen beim anklicken auch noch random Videos auf. Mal schaun ob das gut ankommen kann. Zeit - ca1h

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Productivity Tool",
+  "name": "Productivity Tool (with little extra)",
   "version": "1.6",
-  "description": "Simply make your time valuable.",
+  "description": "Simply make your time valuable and fun.",
   "background": {
     "service_worker": "background.js"
   },
